@@ -1,4 +1,0 @@
-STR_DOM_MISSIONSTRING_2058
-STR_DOM_MISSIONSTRING_2059
-STR_DOM_MISSIONSTRING_2060
-STR_DOM_MISSIONSTRING_2061
